--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
 		"prop-types": "15.7.2",
 		"react": "16.12.0",
 		"react-dom": "16.12.0",
-		"react-scripts": "3.3.1"
+		"react-scripts": "3.3.1",
+		"react95": "2.0.0",
+		"styled-components": "5.0.1"
 	},
 	"devDependencies": {
 		"babel-eslint": "10.0.3",
