--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"not and_uc >= 12"
 	],
 	"dependencies": {
+		"nanoid": "2.1.11",
 		"prop-types": "15.7.2",
 		"react": "16.12.0",
 		"react-dom": "16.12.0",
