--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ToDo95",
 	"scripts": {
-		"build": "react-scripts build",
+		"build": "INLINE_RUNTIME_CHUNK=false react-scripts build",
 		"eject": "react-scripts eject",
 		"start": "react-scripts start"
 	},
