--- a/now.json
+++ b/now.json
@@ -8,6 +8,7 @@
 		{
 			"src": "/.*",
 			"headers": {
+				"cache-control": "max-age=31536000",
 				"content-security-policy": "default-src https:; connect-src 'self'; manifest-src 'self'; font-src 'self'; img-src 'self'; object-src 'none'; script-src 'self'; style-src 'unsafe-inline'; form-action 'self'; base-uri 'self'; frame-ancestors 'self';",
 				"x-content-type-options": "nosniff",
 				"x-frame-options": "deny",
